# Master_Thesis_Exps

./: .gitattributes  CLAUDE.md  README.md  _vast_setup_check.txt
experiments/asr_backbone_comparison/: .gitignore  ANALYSIS.md  EXPERIMENT_SUMMARY.md  README.md  RESULTS.md  pyproject.toml  run_rwkv7_fixes.sh  setup_rwkv.sh
experiments/asr_backbone_comparison/configs/: bidir_conv.yaml  bidir_cosine.yaml  bidir_vim.yaml  bidir_vim_mamba.yaml  biwkv6.yaml  biwkv6_6L.yaml  biwkv6_6L_100ep.yaml  complex_d_cos2.yaml  complex_decay.yaml  d_cos2_headscale.yaml  default.yaml  gaussian_dual.yaml  lion12.yaml  lion12_100ep.yaml  mamba_wsd_v2.yaml  multiscale.yaml  run014_layerconv.yaml  run015_temperature.yaml  run016_temperature_reg.yaml  run017_layerconv_reg.yaml  rwkv7_fix_all.yaml  rwkv7_fix_decay.yaml
experiments/asr_backbone_comparison/configs/run019/: rwkv6.yaml  rwkv6_default_cosine100.yaml  rwkv7.yaml  rwkv7_default_cosine100.yaml
experiments/asr_backbone_comparison/configs/run020/: bidir_rwkv6_baseline.yaml  bidir_rwkv6_delta.yaml  bidir_rwkv6_lucid.yaml  rwkv6_baseline.yaml  rwkv6_delta.yaml  rwkv6_lucid.yaml
experiments/asr_backbone_comparison/outputs/run-001_mamba-wsd12/: samples_mamba.txt
experiments/asr_backbone_comparison/outputs/run-002_mamba-wsd46/: config_snapshot.yaml  results.json  run_info.json
experiments/asr_backbone_comparison/outputs/run-003_bidir-cosine/: run_info.json  samples_bidir_rwkv6.txt
experiments/asr_backbone_comparison/outputs/run-003_mamba-wsd12/: config_snapshot.yaml  history_mamba.json  results_tables.txt  vocab.json
experiments/asr_backbone_comparison/outputs/run-004_mamba-wsd46/: history_mamba.json  (+2 more)
experiments/asr_backbone_comparison/scripts/: eval_hybrid_carry.py  launch_run014_015.sh  launch_run016_017.sh  launch_run020.sh  push_results.py  run019_queue.sh  run_experiment.py
experiments/formal_v1/: .gitignore  CLAUDE.md  ENV_DISCRETIZATION.md  EXPRESSIVITY_AXES.md  INFRASTRUCTURE_PLAN.md  MAMBA2_LUCID_ADAPTATION.md  MAMBA2_NOVELTY_GATE.md  MULTIDIL_INIT_FIX_HANDOFF.md  PLAN.md  RESULTS.md  RSE_DISTRIBUTION_ANALYSIS.md  RWKV6_FIX_REVIEW.md  SHAPING_THE_THESIS.md  STAGE10_ANALYSIS.md  STAGE10_PLAN.md  STAGE10_SUMMARY.md  STAGE11_AGENT_QUEUE.md  STAGE12_DECAY_COUPLED_DELTA_RESULTS.md  STAGE2_RESULTS.md  STAGE3_RESULTS.md  STAGE5_PHASE1_STATUS.md  STAGE5_PLAN.md  STAGE5_RESULTS.md  STAGE6_ANALYSIS.md  STAGE6_CONCLUSIONS.md  TODO_DELTA_RULE.md  TODO_FUTURE_IDEAS.md  pyproject.toml  stages_2_9_summary.md
experiments/formal_v1/configs/: 14m.yaml  cv_pilot.yaml  default.yaml  discretization.yaml  experiments.yaml  lucid_comparison.yaml
experiments/formal_v1/outputs/: _cb5_rescue_log.txt  _index.csv  _streaming_memory.csv  stage10_dryrun.json
experiments/formal_v1/scripts/: auto_dispatch_la_gpu2.sh  auto_launch_lion_rse_on_lucid_finish.sh  auto_launch_mamba2_lion_p7.sh  bench_cayley_compile.py  benchmark_mamba.py  benchmark_mamba2.py  benchmark_rse_fast.py  benchmark_stage8_scans.py  benchmark_stage8_scripted.py  benchmark_stage8_v2.py  benchmark_stage9.py  build_cv_manifest.py  cache_cv_audio.py  compare_mamba.sh  debug_run.py  diagnose_linear_attn.py  diagnose_mamba2.py  diagnose_mamba2_novelty.py  dispatch_cv_full_matrix.sh  dispatch_cv_resume_gpu13.sh  dryrun_stage10_1_to_4.py  eval_only.py  generate_stage2_analysis.py  launch_7m_50ep_lion_lucid.sh  launch_7m_50ep_lion_multidil_v2.sh  launch_7m_50ep_lion_rse_depth_viscosity.sh  launch_7m_50ep_lion_vanilla.sh  launch_7m_50ep_singles.sh  launch_baselines.sh  launch_cb1_cb5a.sh  launch_cb3.sh  launch_cb5b.sh  launch_cb7.sh  launch_cv_pilot.sh  launch_discretization.sh  launch_full_campaign.sh  launch_gpu0_14m_causal_chain.sh  launch_gpu0_14m_compositions_chain.sh  launch_gpu0_la_lion_s_multidil_chain.sh  launch_gpu1_14m_causal_chain.sh  (+40 more)
experiments/formal_v1/src/: config.py
experiments/formal_v1/tests/: test_common_voice.py  test_decay_coupled_delta.py  test_delta_scan_kernels.py  test_linear_attn_causal.py  test_linear_attn_rse.py  test_mamba2_block.py  test_mamba2_dlucid.py  test_mamba2_householder.py  test_mamba2_kernels.py  test_mamba2_lucid.py  test_mamba2_lucid_c.py  test_mamba2_novelty_gate.py  test_mamba2_rse.py  test_mechanisms.py  test_multidil_init_v2_dispatch.py  test_stage11_1.py
experiments/synthetics_v1/: .gitignore  CLAUDE.md  COST_ESTIMATE.md  DEBUG.md  PLAN.md  README.md  RUNBOOK.md  pyproject.toml
experiments/synthetics_v1/configs/: cohort_reduced.yaml  cohort_stage12.yaml  cohort_stage12_focused.yaml  default.yaml
experiments/synthetics_v1/outputs/: REPORT_phase1a.md
experiments/synthetics_v1/scripts/: analyze_cohort.py  debug_run.py  run_T1024_subset.sh  run_T1024_subset_b32.sh  run_cohort_reduced.sh  run_cohort_single_mech.sh  run_cohort_stage12.sh  run_cohort_stage12_focused.sh  run_experiment.py  setup_symlinks.sh
experiments/synthetics_v1/src/: config.py
experiments/synthetics_v1/tests/: test_mqar_generator.py  test_synthetic_model.py
(+1452 files in other folders)
