[project]
name = "formal-v1"
version = "0.1.0"
description = "Formal ASR backbone comparison experiments — Master Thesis"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "datasets>=2.18.0",
    "jiwer>=3.0.0",
    "matplotlib>=3.8.0",
    "pyyaml>=6.0",
    "einops>=0.7.0",
    "soundfile>=0.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
