[project]
name = "formal-v1"
version = "0.1.0"
description = "Formal ASR backbone comparison experiments — Master Thesis"
requires-python = ">=3.10"
dependencies = [
    # Core: training + audio
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "datasets>=2.18.0,<4.0",
    "jiwer>=3.0.0",
    "pyyaml>=6.0",
    "einops>=0.7.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",

    # Research harness (flat-file artifacts, no TensorBoard)
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8.0",
    "seaborn>=0.13",
    "tqdm>=4.66",
    "rich>=13.7",
    "tabulate>=0.9",
    "psutil>=5.9",
]

[project.optional-dependencies]
# Optional fast Mamba backend — requires CUDA build, not part of core install.
cuda-mamba = ["mamba-ssm>=2.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
